kubernetes/apps/gatus/gatus/app/ingress.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app gatus-tailscale
  namespace: gatus
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: gatus
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: gatus
      port:
        number: 8080
